--- a/MessagingTutorial/src/main/res/values/strings.xml
+++ b/MessagingTutorial/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_list_users">ListUsersActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="message_elipses">Message...</string>
 
 </resources>
