--- a/MessagingTutorial/src/main/res/values/strings.xml
+++ b/MessagingTutorial/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="message_elipses">Message...</string>
+    <string name="logout">Logout</string>
 
 </resources>
